--- a/WPFApplication/WPFApplication.csproj
+++ b/WPFApplication/WPFApplication.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileMonitorService\FileMonitorService.csproj" />
+  </ItemGroup>
+
 </Project>
